Incluído o link para a página 'Vídeos Fraternos'. Criado conteúdo para a página 'Vídeos Fraternos'.

--- a/ensino-religioso.html
+++ b/ensino-religioso.html
@@ -1,53 +1,144 @@
-<!DOCTYPE html>
-<html>
+  <!DOCTYPE html>
+  <html>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Instituto Ser Integral</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.4/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
-  <link rel="stylesheet" href="./css/main.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Instituto Ser Integral</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.4/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
+    <link rel="stylesheet" href="./css/main.css">
+  </head>
 
-<body>
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-    <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="index.html"><img src="./img/logo.png" width="80" height="100"></a> -->
-      <a class="navbar-brand" href="index.html"><i class="fas fa-book-open"></i>Instituto Ser Integral</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <!-- <li class="nav-item"><a class="nav-link">Instituto Instituto Ser Integral</a></li> -->
-          <li class="nav-item">
-            <a class="nav-link" href="blog.html">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Preparatório Colégio Militar</a>
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link" href="turmainiciante.html">Turma Iniciante</a></li>
-              <li class="nav-item"><a class="nav-link" href="turmaavancada.html">Turma Avançada</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">África - Ensino Médio</a>
-          </li>
-        </ul>
+  <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+      <div class="container-fluid">
+        <!-- <a class="navbar-brand" href="index.html"><img src="./img/logo.png" width="80" height="100"></a> -->
+        <a class="navbar-brand" href="index.html"><i class="fas fa-book-open"></i>Instituto Ser Integral</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <!-- <li class="nav-item"><a class="nav-link">Instituto Instituto Ser Integral</a></li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Preparatório Colégio Militar</a>
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="turmainiciante.html">Turma Iniciante</a></li>
+                <li class="nav-item"><a class="nav-link" href="turmaavancada.html">Turma Avançada</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">África - Ensino Médio</a>
+            </li>
+            <li>
+              <a class="nav-link" href="ensino-religioso.html">Vídeos Fraternos</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid padding">
+      <div class="row text-center padding">
+        <div class="col-12">
+          <h2>Playlist de Estudo: Paulo e Estevão</h2>
+          <a href="https://www.youtube.com/channel/UCR149qvxkUGEu_OIOZ5bYAA" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube"></a>
+          <i class="fab fa-youtube"></i></a>
+        </div>
+      </div>
+      <div class="row text-center padding">
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/5pGZJA_GDys" frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/xGiwJ0EMGx4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/S_DSDwDJL-o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/jgUSQXnrczc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/go9Wa32_m6s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/hZb2oBWAwKg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/12gkJxq61Kc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/HnT8_AcJRHY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/Ofc7Sm5k6AU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/ozeqTRzlp8k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/W7PgexAT_x0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/VXjWkSVi_EA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/FdfX23RF7to" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/MKGNU-Qu5Rk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/WzcV31Aj89E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/Gvgb22Gei3w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/4dwOwgalcPI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/vx8vtap-1rw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/RvZNQLoHbLk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/gjOS8qEtpIQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/zQ-MS9jpGT8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/n8d_j8uOrQI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/LaZnf4dVZBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/GWKG1bNQYCc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/lp2Hlwk1f4Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <iframe src="https://www.youtube.com/embed/OZOyP6-WqmY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
-  </nav>
-  <div class="grid-container">
-    <h1>EM DESENVOLVIMENTO</h1>
-  </div>
-</body>
+  </body>
 
-</html>
+  </html>
