--- a/turmainiciante.html
+++ b/turmainiciante.html
@@ -39,13 +39,20 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">África - Ensino Médio</a>
                     </li>
+                    <li>
+                        <a class="nav-link" href="ensino-religioso.html">Vídeos Fraternos</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="container-fluid padding">
         <div class="row text-center padding">
-            <div class="col-12"><h2>Aulas de Matemática</h2><a href="https://www.youtube.com/channel/UCWhh6tIOyWI_qbVWsTJCqbA" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube"><i class="fab fa-youtube"></i></a></div>
+            <div class="col-12">
+                <h2>Aulas de Matemática</h2>
+                <a href="https://www.youtube.com/channel/UCWhh6tIOyWI_qbVWsTJCqbA" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube">
+                    <i class="fab fa-youtube"></i></a>
+            </div>
         </div>
         <div class="row text-center padding">
             <div class="col-xs-12 col-sm-6 col-md-3">
