--- a/prep-if.html
+++ b/prep-if.html
@@ -41,6 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">África - Ensino Médio</a>
                     </li>
+                    <li>
+                        <a class="nav-link" href="ensino-religioso.html">Vídeos Fraternos</a>
+                    </li>
                 </ul>
             </div>
         </div>
