--- a/turmaavancada.html
+++ b/turmaavancada.html
@@ -36,10 +36,13 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
+              <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">África - Ensino Médio</a>
+              <a class="nav-link" href="#">África - Ensino Médio</a>
+          </li>
+          <li>
+              <a class="nav-link" href="ensino-religioso.html">Vídeos Fraternos</a>
           </li>
 
         </ul>
