Incluído o título da Turma Iniciante acima do link do YouTube na página da Turma Iniciante

--- a/ensino-religioso.html
+++ b/ensino-religioso.html
@@ -51,9 +51,9 @@
     <div class="container-fluid padding">
       <div class="row text-center padding">
         <div class="col-12">
+          <a href="https://www.youtube.com/channel/UCR149qvxkUGEu_OIOZ5bYAA" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube">
+            <i class="fab fa-youtube"></i></a>
           <h2>Playlist de Estudo: Paulo e Estevão</h2>
-          <a href="https://www.youtube.com/channel/UCR149qvxkUGEu_OIOZ5bYAA" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube"></a>
-          <i class="fab fa-youtube"></i></a>
         </div>
       </div>
       <div class="row text-center padding">
