--- a/turmainiciante.html
+++ b/turmainiciante.html
@@ -49,9 +49,10 @@
     <div class="container-fluid padding">
         <div class="row text-center padding">
             <div class="col-12">
-                <h2>Aulas de Matemática</h2>
+                <h2>Preparatório CM - Turma Iniciante</h2>
                 <a href="https://www.youtube.com/channel/UCWhh6tIOyWI_qbVWsTJCqbA" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube">
                     <i class="fab fa-youtube"></i></a>
+                <h2>Aulas de Matemática</h2>
             </div>
         </div>
         <div class="row text-center padding">
