--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <!-- Header -->
+    
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
@@ -63,8 +64,8 @@
                 <div class="carousel-caption">
                     <h1 class="display-2"></h1>
                     <h3>Preparatório Colégio Militar</h3>
-                    <a href="turmainiciante.html" class="btn btn-primary btn-lg" role="button" title="Ver vídeos da Turma Iniciante">TURMA INICIANTE</a>
-                    <a href="turmaavancada.html" class="btn btn-success btn-lg" role="button" title="Ver vídeos da Turma Avançada">TURMA AVANÇADA</a>
+                    <a href="turmainiciante.html" class="btn btn-outline-light btn-lg" role="button" title="Ver vídeos da Turma Iniciante">TURMA INICIANTE</a>
+                    <a href="turmaavancada.html" class="btn btn-danger btn-lg" role="button" title="Ver vídeos da Turma Avançada">TURMA AVANÇADA</a>
                 </div>
             </div>
             <div class="carousel-item">
@@ -80,7 +81,7 @@
                 <div class="carousel-caption">
                     <h1 class="display-2"></h1>
                     <h3>Vídeos Fraternos</h3>
-                    <a href="ensino-religioso.html" class="btn btn-outline-light btn-lg" role="button" title="Vídeos Fraternos">CLIQUE AQUI</a>
+                    <a href="ensino-religioso.html" class="btn btn-outline-primary btn-lg" role="button" title="Vídeos Fraternos">CLIQUE AQUI</a>
                 </div>
             </div>
         </div>
