Alterado o estilo das setas do tipo link para topo de página das páginas Blog, Ensino Religioso e Index de 'arrow-up' para 'arrow-alt-circle-up'.

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </footer>
     </div>
     <div style="position:fixed; bottom:0px; left:30px;">
-        <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-up"></i></a>
+        <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
     </div>
 </body>
 
