--- a/blog.html
+++ b/blog.html
@@ -77,7 +77,7 @@
     <h6 class="signature">Coordenadora de Língua Portuguesa</h6>
   </div>
   <div style="position:fixed; bottom:0px; right:30px;">
-    <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-up"></i></a>
+    <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
   </div>
 </body>
 
