--- a/ensino-religioso.html
+++ b/ensino-religioso.html
@@ -140,7 +140,7 @@
       </div>
     </div>
     <div style="position:fixed; bottom:0px; right:30px;">
-      <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-up"></i></a>
+      <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
   </div>
   </body>
 
