--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./img/bk_cmcg2.jpg" class="img-fluid" alt="Imagem: CMCG/Google">
+                <img src="img/bg_cmcg_adjust.png" class="img-fluid" alt="Imagem: CMCG/Google">
                 <div class="carousel-caption">
                     <h1 class="display-2"></h1>
                     <h3>Preparatório Colégio Militar</h3>
@@ -69,15 +69,15 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./img/bk_ifms.png" class="img-fluid" alt="Preparatório IFMS">
+                <img src="./img/logo_IF_2021.png" class="img-fluid" alt="Preparatório IFMS">
                 <div class="carousel-caption">
                     <h1 class="display-2"></h1>
-                    <h3>Preparatório IFMS</h3>
+                    <h3>Preparatório</h3>
                     <a href="prep-if.html" class="btn btn-success btn-lg" role="button" title="Ver vídeos do Preparatório IFMS">CLIQUE AQUI</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./img/bk_cosmos.jpg" class="img-fluid" alt="Ensino Religioso">
+                <img src="./img/logo_cosmos.png" class="img-fluid" alt="Ensino Religioso">
                 <div class="carousel-caption">
                     <h1 class="display-2"></h1>
                     <h3>Vídeos Fraternos</h3>
@@ -96,18 +96,19 @@
     <!-- Jumbotron -->
     
     <!-- Welcome Section -->
-    <div class="container-fluid padding">
-        <div class="row welcome text-center">
-            <div class="col-12">
-                <h1 class="display-4">Aprovada no Colégio Militar</h1>
-            </div>
-            <hr>
-            <div class="col-12">
-                <p class="lead">Parabéns Eduarda! Estamos muito felizes com a sua aprovação no Colégio Militar de Campo
-                    Grande!</p>
-            </div>
-        </div>
-    </div>
+    <!-- <div class="container-fluid padding">
+            <div class="row welcome text-center">
+                <div class="col-12">
+                    <h1 class="display-4">Aprovada no Colégio Militar</h1>
+                </div>
+                <hr>
+                <div class="col-12">
+                    <p class="lead">Parabéns Eduarda! Estamos muito felizes com a sua aprovação no Colégio Militar de Campo
+                        Grande!</p>
+                    </div>
+                </div>
+            </div> -->
+
     <!-- Three Column Section -->
     
     <!-- Two Column Section -->
