Incluídos vídeos no canal Turma Avançada.

--- a/turmaavancada.html
+++ b/turmaavancada.html
@@ -44,14 +44,56 @@
           <li>
               <a class="nav-link" href="ensino-religioso.html">Vídeos Fraternos</a>
           </li>
-
         </ul>
       </div>
     </div>
   </nav>
-  <div class="grid-container">
-    <h1>EM DESENVOLVIMENTO</h1>
+  <div class="container-fluid padding">
+    <div class="row text-center padding">
+      <div class="col-12">
+          <h4>Preparatório CM - Turma Avançada</h4>
+          <a href="https://www.youtube.com/channel/UCv_8h0yZl4kV30T8f7xNoAg" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube">
+              <i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+    <div class="row text-center padding">
+      <div class="col-12">
+        <h5>Matemática | Correção de Prova | CMR</h5>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <iframe src="https://www.youtube.com/embed/tBsr06GdLeY" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <iframe src="https://www.youtube.com/embed/ZVBwSXSyRlg" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <iframe src="https://www.youtube.com/embed/HuBdiUh9DFQ" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-12">
+        <h5>Matemática | Correção de Prova | CMB</h5>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <iframe src="https://www.youtube.com/embed/6zc-dNRLk5U" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <iframe src="https://www.youtube.com/embed/7_b5oNF2BQE" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <iframe src="https://www.youtube.com/embed/dHI9ql9Rjfw" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
   </div>
 </body>
-
 </html>
