--- a/turmainiciante.html
+++ b/turmainiciante.html
@@ -52,46 +52,66 @@
                 <h2>Preparatório CM - Turma Iniciante</h2>
                 <a href="https://www.youtube.com/channel/UCWhh6tIOyWI_qbVWsTJCqbA" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube">
                     <i class="fab fa-youtube"></i></a>
-                <h2>Aulas de Matemática</h2>
+                <!-- <h2>Em alta</h2> -->
             </div>
         </div>
         <div class="row text-center padding">
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <iframe src="https://www.youtube.com/embed/bEIG-PSJAHQ" title="YouTube video player" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <iframe src="https://www.youtube.com/embed/3eZgDrWFbiw" title="YouTube video player" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <iframe src="https://www.youtube.com/embed/dduzC7FEPC0" title="YouTube video player" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <iframe src="https://www.youtube.com/embed/xsRAA9bHa10" title="YouTube video player" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
                 <iframe src="https://www.youtube.com/embed/72bV8E7Xx6o" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4">
                 <iframe src="https://www.youtube.com/embed/TJwa35agwhU" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4">
                 <iframe src="https://www.youtube.com/embed/fvkApQgth78" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4">
                 <iframe src="https://www.youtube.com/embed/hfwKSNdl2sA" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4">
                 <iframe src="https://www.youtube.com/embed/2xj9kS6XUAg" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4">
                 <iframe src="https://www.youtube.com/embed/40hmeODZ6E8" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4">
                 <iframe src="https://www.youtube.com/embed/GiUg4ks_0vM" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4">
                 <iframe src="https://www.youtube.com/embed/visRggyHP_I" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
