Incluídos vídeos no canal IFMS.

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 
     <!-- Connect -->
     <div class="container-fluid padding">
-        <div class="row text-center padding">
+        <div class="row text-left padding">
             <div class="col-12">
-                <h4>Vídeos em destaque</h4>
+                <h5>Vídeos em alta</h5>
             </div>
         </div>
         <div class="row text-center padding">
