Menu Mapa do Site reaproveitado como canal África - Ensino Médio. Incluído o link africa.html em todos os itens do menu e links de rodapé. Incluídos vídeos no canal África.

--- a/africa.html
+++ b/africa.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">África - Ensino Médio</a>
+            <a class="nav-link" href="africa.html">África - Ensino Médio</a>
           </li>
           <li>
             <a class="nav-link" href="ensino-religioso.html">Vídeos Fraternos</a>
@@ -48,9 +48,39 @@
       </div>
     </div>
   </nav>
-  <div class="grid-container">
-    <h1>EM DESENVOLVIMENTO</h1>
+  <div class="container-fluid padding">
+    <div class="row text-center padding">
+      <div class="col-12">
+        <h4>África - Ensino Médio</h4>
+        <a href="https://www.youtube.com/channel/UCL-UZ2AEInx6QFmVs2eO2Tw" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube">
+            <i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+    <div class="row text-center padding">
+      <div class="col-12">
+        <h5>Aulas de Matemática | Ensino Médio</h5>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <iframe src="https://www.youtube.com/embed/ONnpJVEwC8c" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <iframe src="https://www.youtube.com/embed/UquE5d8VrAg" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <iframe src="https://www.youtube.com/embed/nqdCIEPs7JI" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <iframe src="https://www.youtube.com/embed/frZBJLP2wzc" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
   </div>
 </body>
-
 </html>
