--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">África - Ensino Médio</a>
+                        <a class="nav-link" href="africa.html">África - Ensino Médio</a>
                     </li>
                     <li>
                         <a class="nav-link" href="ensino-religioso.html">Vídeos Fraternos</a>
@@ -123,7 +123,7 @@
 
     <!-- Connect -->
     <div class="container-fluid padding">
-        <div class="row text-left padding">
+        <div class="row text-center padding">
             <div class="col-12">
                 <h5>Vídeos em alta</h5>
             </div>
