--- a/turmaavancada.html
+++ b/turmaavancada.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">África - Ensino Médio</a>
+              <a class="nav-link" href="africa.html">África - Ensino Médio</a>
           </li>
           <li>
               <a class="nav-link" href="ensino-religioso.html">Vídeos Fraternos</a>
@@ -58,7 +58,7 @@
     </div>
     <div class="row text-center padding">
       <div class="col-12">
-        <h5>Matemática | Correção de Prova | CMR</h5>
+        <h5>Aulas de Matemática | Correção de Prova | CMR</h5>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
         <iframe src="https://www.youtube.com/embed/tBsr06GdLeY" title="YouTube video player" 
