--- a/filantropia.html
+++ b/filantropia.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">África - Ensino Médio</a>
+            <a class="nav-link" href="africa.html">África - Ensino Médio</a>
           </li>
           <li>
             <a class="nav-link" href="ensino-religioso.html">Vídeos Fraternos</a>
