Incluída frase de acessibilidade ao ícone flecha no canal de ensino religioso. Modificados os padrões dos botões do carrossel.

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <div class="carousel-caption">
                     <h1 class="display-2"></h1>
                     <h3>Preparatório Colégio Militar</h3>
-                    <a href="turmainiciante.html" class="btn btn-outline-light btn-lg" role="button" title="Ver vídeos da Turma Iniciante">TURMA INICIANTE</a>
-                    <a href="turmaavancada.html" class="btn btn-danger btn-lg" role="button" title="Ver vídeos da Turma Avançada">TURMA AVANÇADA</a>
+                    <a href="turmainiciante.html" class="btn btn-light active btn-sm" role="button" aria-pressed="true" title="Ver vídeos da Turma Iniciante">TURMA INICIANTE</a>
+                    <a href="turmaavancada.html" class="btn btn-danger btn-sm" role="button" aria-pressed="true" title="Ver vídeos da Turma Avançada">TURMA AVANÇADA</a>
                 </div>
             </div>
             <div class="carousel-item">
@@ -73,7 +73,7 @@
                 <div class="carousel-caption">
                     <h1 class="display-2"></h1>
                     <h3>Preparatório</h3>
-                    <a href="prep-if.html" class="btn btn-success btn-lg" role="button" title="Ver vídeos do Preparatório IFMS">CLIQUE AQUI</a>
+                    <a href="prep-if.html" class="btn btn-outline-success btn-sm" role="button" title="Ver vídeos do Preparatório IFMS">CLIQUE AQUI</a>
                 </div>
             </div>
             <div class="carousel-item">
@@ -81,7 +81,7 @@
                 <div class="carousel-caption">
                     <h1 class="display-2"></h1>
                     <h3>Vídeos Fraternos</h3>
-                    <a href="ensino-religioso.html" class="btn btn-outline-primary btn-lg" role="button" title="Vídeos Fraternos">CLIQUE AQUI</a>
+                    <a href="ensino-religioso.html" class="btn btn-primary btn-sm" role="button" title="Clique aqui">VER VÍDEOS</a>
                 </div>
             </div>
         </div>
